--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <hr/>
     <a href="public/birthday-invite.html">
         <h3>Birthday Invite Project</h3>
-        <img src="/assets/images/birthday-Invite.png" alt="Birthday Cake" height="200"/>
+        <img src="./assets/images/birthday-Invite.png" alt="Birthday Cake" height="200"/>
     </a>
     <br/>
     <br/>
     <a href="public/movie-ranking.html">
         <h3>Movie Ranking Project</h3>
-        <img src="/assets/images/movie-ranking.png" alt="Movie Ranking" height="200"/>
+        <img src="./assets/images/movie-ranking.png" alt="Movie Ranking" height="200"/>
     </a>
     <hr/>
     <a href="public/about.html">About Me</a>
